--- a/views/signup/index.jade
+++ b/views/signup/index.jade
@@ -8,21 +8,22 @@ block head
 
 block body
   div.row
-    div.page-header
-      h1 Sign Up
+     div.col-sm-12
+       div.page-header
+         h1 Sign Up
 
-    div#signup
-    form
-      div.form-group.bnt-group
-        label.btn.btn-primary
-      div.form-group
-        label.control-label Pick a Username:
-        input.form-control(type='text', name='username', placeholder='Username')
-      div.form-group
-        label.control-label Enter your email:
-        input.form-control(type='text', name='email', placeholder='Email')
-      div.form-group
-        label.control-label Password:
-        input.form-control(type='password', name='password', placeholder='Password')
-      div.form-group
-        button.btn.btn-primary.btn-signup(type='button') Create account
+       div#signup
+       form
+         div.form-group.bnt-group
+           label.btn.btn-primary
+         div.form-group
+           label.control-label Pick a Username:
+           input.form-control(type='text', name='username', placeholder='Username')
+         div.form-group
+           label.control-label Enter your email:
+           input.form-control(type='text', name='email', placeholder='Email')
+         div.form-group
+           label.control-label Password:
+           input.form-control(type='password', name='password', placeholder='Password')
+         div.form-group
+           button.btn.btn-primary.btn-signup(type='button') Create account
