Made angular app with rerouting
Created angular app which renders a template and reroutes. Should be
more efficient than before.

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,12 +1,10 @@
-extends layouts/layout
-
 block head
   title Welcome to OxStuTutors
 block neck
   link(rel='stylesheet', href='/stylesheets/index.css')
 block body
   div.jumbotron
-    h1 OxStuTutors
+    h1 OxStuTutors {{ test }}
     p.lead
       | Tutoring made easy.
       div
