--- a/views/signup/index.jade
+++ b/views/signup/index.jade
@@ -1,8 +1,5 @@
 //
    Created by Andrei on 12/01/15.
-
-extends ../layouts/layout
-
 block head
   title Sign Up
 
@@ -15,7 +12,7 @@ block body
        div.page-header
          h1 Sign Up
 
-       div#signup(ng-controller='SignUpCtrl')
+       div#signup
          form(ng-submit='submit()')
            div.form-group.bnt-group
              span.control-label(style='margin-right:10px') I want to:
