--- a/views/signup/index.jade
+++ b/views/signup/index.jade
@@ -13,21 +13,53 @@ block body
          h1 Sign Up
 
        div#signup
-         form(ng-submit='submit()')
+         form(name='form', ng-submit='submit(form)')
            div.form-group.bnt-group
              span.control-label(style='margin-right:10px') I want to:
              span.btn.btn-primary(ng-model='user.role', btn-radio="'Client'", style='margin-right:10px') Find a tutor
              span.btn.btn-primary(ng-model='user.role', btn-radio="'Tutor'") Become a tutor
            div(ng-show='user.role')
-             div.form-group
+             div.form-group(
+               ng-class="{" +
+               "'has-warning': form.username.$dirty," +
+               "'has-success': from.username.$valid && form.username.$dirty && !form.username.$error.mongoose," +
+               "'has-error': form.username.$invalid && form.username.$dirty || form.username.$error.mongoose" +
+               "}"
+             )
                label.control-label Pick a Username:
                input.form-control(type='text', name='username', placeholder='Username', ng-model='user.username')
-             div.form-group
+               span(class='help-block', ng-show='form.username.$error.unique && form.username')
+               span(class='help-block', ng-show='form.username.$error.mongoose')
+               | {{ errors.username }}
+             div.form-group(
+               ng-class="{" +
+               "'has-warning': form.email.$dirty," +
+               "'has-success': from.email.$valid && form.email.$dirty && !form.email.$error.mongoose," +
+               "'has-error': form.email.$invalid && form.email.$dirty || form.email.$error.mongoose" +
+               "}"
+             )
                label.control-label Enter your email:
                input.form-control(type='text', name='email', placeholder='Email', ng-model='user.email')
-             div.form-group
+               span(class='help-block', ng-show='form.email.$error.email && !form.email.$focused')
+               span(class='help-block', ng-show='form.email.$error.mongoose')
+               | {{ errors.email }}
+             div.form-group(
+               ng-class="{" +
+               "'has-warning': form.password.$dirty," +
+               "'has-success': from.password.$valid && form.password.$dirty && !form.password.$error.mongoose," +
+               "'has-error': form.password.$invalid && form.password.$dirty || form.password.$error.mongoose" +
+               "}"
+             )
                label.control-label Password:
                input.form-control(type='password', name='password', placeholder='Password', ng-model='user.password')
+               span(class='help-block',
+                ng-show=
+                " (form.password.$error.minlength || form.password.$invalid) " +
+                "&& form.password.$dirty" +
+                "&& !form.password.$error.required")
+               | Password must be at least 5 characters.
+               span(class='help-block', ng-show='form.password.$error.mongoose')
+               | {{ errors.password }}
              div.form-group
                button.btn.btn-primary.btn-signup(type='submit') Create account
              div
