--- a/views/layouts/layout.jade
+++ b/views/layouts/layout.jade
@@ -17,29 +17,7 @@ html
     block neck
 
   body(ng-app='oxstututors')
-    div.navbar.navbar-default.navbar-fixed-top
-      div.container
-        div.navbar-header
-          a.navbar-brand(href='/')
-            span.navbar-brand-label #{projectName}
-          button.navbar-toggle.collapsed(data-toggle='collapse', data-target='.my-navbar-collapse')
-            span.icon-bar
-            span.icon-bar
-            span.icon-bar
-        div.navbar-collapse.my-navbar-collapse.collapse
-          ul.nav.navbar-nav
-            li: a(href='/') Home
-            li: a(href='/about/') About
-            li: a(href='/signup/') Sign Up
-            li: a(href='/contact/') Contact
-          ul.nav.navbar-nav.navbar-right(ng-hide='currentUser')
-            li: a(href='/login/')
-              i.fa.fa-user
-              | Sign In
-          ul.nav.navbar-nav.navbar-right(ng-show='currentUser')
-            li: a(href='/auth/users/')
-              i.fa.fa-user
-              | {{ currentUser.username }}
+    include navbar
     div.page.container(ng-view)
       block body
 
