--- a/views/login/index.jade
+++ b/views/login/index.jade
@@ -1,7 +1,6 @@
 //
    Created by Andrei on 12/01/15.
 
-extends ../layouts/layout
 block head
    title Login
 block body
@@ -10,13 +9,30 @@ block body
       div.page-header
         h1 Sign In
       div#login
-      form
+      form(ng-submit='login(form)', name='form')
         div.form-group
-          label.control-label Username or Email:
-          input.form-control(type='text', name='username')
+          input.form-control(
+            type='text',
+            name='username',
+            placeholder='Username',
+            ng-model='user.username',
+            required,
+            autofocus
+          )
+          p.help-block(ng-show='form.username.$error.mongoose')
+          | {{errors.username}}
         div.form-group
-          label.control-label Password:
-          input.form-control(type='password', name='password')
+          input.form-control(
+            type='password',
+            name='password',
+            placeholder='Password',
+            ng-model='user.password',
+            required
+          )
+          p.help-block(ng-show='form.password.$error.mongoose')
+          | {{errors.password}}
+        div.form-group.has-error
+          p {{ error.other }}
         div.form-actions
-          button.btn.btn-primary.btn-login(type='button') Sign In
+          button.btn.btn-primary.btn-login(type='submit') Sign In
           a.btn.btn-link(href='/login/forgot/') Forgot your password?
