--- a/views/index.jade
+++ b/views/index.jade
@@ -4,7 +4,7 @@ block neck
   link(rel='stylesheet', href='/stylesheets/index.css')
 block body
   div.jumbotron
-    h1 OxStuTutors {{ test }}
+    h1 OxStuTutors
     p.lead
       | Tutoring made easy.
       div
