--- a/views/users/index.jade
+++ b/views/users/index.jade
@@ -6,10 +6,13 @@ div.row(ng-show='thisIsMe')
 div.row
   div.col-sm-8
     div.page-header
-      h1 USERS {{profile}}
-      p Subject this guy teaches
+      h1
+      | USERS {{profile}}
+      span Subject this guy teaches
   div.col-sm-4
     p We will have a photo here
 div.row
-    div.col-sm-12
-      p Everything else
+  div.col-sm-12
+    md-toolbar.md-theme-light
+      span Text
+
