Updated the profile page
Now it does show all the details from the database

--- a/views/users/index.jade
+++ b/views/users/index.jade
@@ -3,16 +3,22 @@
 div.row(ng-show='thisIsMe')
   div.col-sm-12
     p Check here if the profile is complete
-div.row
+div.row(style='background-color:#44d0ff; min-height:200px')
   div.col-sm-8
-    div.page-header
-      h1
-      | USERS {{profile}}
+    div
+      h1 USERS {{username}} Profile {{profile}}
       span Subject this guy teaches
   div.col-sm-4
     p We will have a photo here
-div.row
-  div.col-sm-12
+div.row(ng-repeat='(key, value) in profile' )
+  div.col-sm-12(ng-show='value.length')
     md-toolbar.md-theme-light
-      span Text
-
+      h1.md-toolbar-tools
+        span {{ PrettyName(key) }}
+    md-content
+      md-list
+        md-item(ng-repeat="item in [].concat(value)")
+          md-item-content
+            div.md-title-content
+              h4 {{item}}
+          md-divider(ng-if='!$last')
