--- a/views/layouts/layout.jade
+++ b/views/layouts/layout.jade
@@ -15,8 +15,11 @@ html
     script(src='//ajax.googleapis.com/ajax/libs/angularjs/1.3.6/angular-animate.min.js')
     script(src='//ajax.googleapis.com/ajax/libs/angularjs/1.3.6/angular-aria.min.js')
     script(src='/vendor/material/angular-material.js')
+    script(src='/vendor/ngFlow/ng-flow-standalone.js')
+    script(src='/vendor/ngFlow/ng-flow.js')
     link(rel='stylesheet', href='/vendor/material/angular-material.css')
     link(rel='stylesheet', href='/stylesheets/core.css')
+    link(rel='stylesheet', href='/stylesheets/users/edit.css')
     base(href='/')
 
     block neck
