--- a/views/users/edit.jade
+++ b/views/users/edit.jade
@@ -9,11 +9,12 @@ div.row(style='background-color:#44d0ff; min-height:200px')
     div
       h1 EDIIIIT {{test}} Profile {{profile}}
       span Subject this guy teaches
-  div.col-sm-4.thumbnail(flow-init)
-    img(flow-img='$flow.files[0]')
-    p We will have a photo here
-    input(type='file', flow-btn)
-    span.flow-btn Upload file
+  div.col-sm-4
+    input(type='file' nv-file-select uploader='uploader')
+    div(ng-repeat='item in uploader.queue')
+      div(ng-show="uploader.isHTML5" ng-thumb="{ file: item._file, height: 200, width: 200 }")
+      button(ng-click='item.upload()') Save Changes
+
 div.row(ng-repeat='(key, value) in profile' )
   div.col-sm-12(ng-show='value.length')
     md-toolbar.md-theme-light
