--- a/views/users/edit.jade
+++ b/views/users/edit.jade
@@ -12,7 +12,7 @@ div.row(style='background-color:#44d0ff; min-height:200px')
   div.col-sm-4
     input(type='file' nv-file-select uploader='uploader')
     div(ng-repeat='item in uploader.queue')
-      div(ng-show="uploader.isHTML5" ng-thumb="{ file: item._file, height: 200, width: 200 }")
+      div.crop(ng-show="uploader.isHTML5" ng-thumb="{ file: item._file, height: 200, width: 200 }")
       button(ng-click='item.upload()') Save Changes
 
 div.row(ng-repeat='(key, value) in profile' )
