--- a/views/index.jade
+++ b/views/index.jade
@@ -1,31 +1,14 @@
-block head
-  title Welcome to OxStuTutors
-block neck
-  link(rel='stylesheet', href='/stylesheets/index.css')
-block body
-  div.jumbotron
+link(rel='stylesheet', href='/stylesheets/index.css')
+div.md-content.cover(layout, layout-fill)
+  div(layout-fill)
     h1 OxStuTutors
     p.lead
       | Tutoring made easy.
       div
         a.btn.btn-primary.btn-lg(href='/signup/') Create an Account
-      div.clearfix
-  div.row
-    div.col-sm-12
-      div.panel.panel-default
-        div.panel-body
-          h3 About Us
-          p At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti.
-          a.btn.btn-default.btn-block(href='/about/') Learn More
-    div.col-sm-12
-      div.panel.panel-default
-        div.panel-body
-          h3 Sign Up
-          p At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti.
-          a.btn.btn-default.btn-block(href='/signup/') Learn More
-    div.col-sm-12
-      div.panel.panel-default
-        div.panel-body
-          h3 Contact Us
-          p At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti.
-          a.btn.btn-default.btn-block(href='/contact/') Learn More
+div
+  div
+    p Hi - This is the content you want
+  div
+    p List
+
