[Refactor] Changed the name of scss file

--- a/views/layouts/layout.jade
+++ b/views/layouts/layout.jade
@@ -20,7 +20,7 @@ html
     script(src='/vendor/angular-file-upload/angular-file-upload.js')
     link(rel='stylesheet', href='/vendor/material/angular-material.css')
     link(rel='stylesheet', href='/stylesheets/core.css')
-    link(rel='stylesheet', href='/stylesheets/users/edit.css')
+    link(rel='stylesheet', href='/stylesheets/users/users.css')
     base(href='/')
 
     block neck
