[Code] Preparing to make service to list profile

--- a/views/users/index.jade
+++ b/views/users/index.jade
@@ -6,7 +6,7 @@ div.container
     div.col-sm-8
       div
         h1 {{username}}
-          a(ng-show='thisIsMe', href='/editProfile', class='btn btn-primary btn-large', style="margin:20px") Edit
+          a(ng-show='thisIsMe', href='/editProfile', class='btn btn-primary btn-sm', style="margin-left:20px") Edit
         span Subject this guy teaches
     div.col-sm-4
       p We will have a photo here
