--- a/views/users/edit.jade
+++ b/views/users/edit.jade
@@ -1,29 +1,28 @@
-//
-   Created by Andrei on 12/01/15.
-
-div.row(ng-show='thisIsMe')
-  div.col-sm-12
-    p Check here if the profile is complete
-div.row(style='background-color:#44d0ff; min-height:200px')
-  div.col-sm-8
-    div
-      h1 EDIIIIT {{test}} Profile {{profile}}
-      span Subject this guy teaches
-  div.col-sm-4
-    input(type='file' nv-file-select uploader='uploader')
-    div(ng-repeat='item in uploader.queue')
-      div.crop(ng-show="uploader.isHTML5" ng-thumb="{ file: item._file, height: 200, width: 200 }")
-      button(ng-click='item.upload()') Save Changes
-
-div.row(ng-repeat='(key, value) in profile' )
-  div.col-sm-12(ng-show='value.length')
-    md-toolbar.md-theme-light
-      h1.md-toolbar-tools
-        span {{ PrettyName(key) }}
-    md-content
-      md-list
-        md-item(ng-repeat="item in [].concat(value)")
-          md-item-content
-            div.md-title-content
-              h4 {{item}}
-          md-divider(ng-if='!$last')
+div.container
+  div.row(ng-show='thisIsMe')
+    div.col-sm-12
+      p Check here if the profile is complete
+  div.row(class='userHeader')
+    div.col-sm-8
+      div
+        h1 EDIIIIT {{currentUser}} Profile {{profile}}
+        span Subject this guy teaches
+    div.col-sm-4
+      input(type='file' nv-file-select uploader='uploader')
+      div(ng-repeat='item in uploader.queue')
+        div.crop(ng-show="uploader.isHTML5" ng-thumb="{ file: item._file, height: 200, width: 200 }")
+        button(ng-click='item.upload()') Save Changes
+      div(ng-hide='uploader.queue.length')
+        img(ng-src='{{img}}' style='max-height:200px')
+  div.row(ng-repeat='(key, value) in profile', layout='column', class='md-padding')
+    div.col-sm-12(ng-show='value.length')
+      md-toolbar.md-theme-light
+        h1.md-toolbar-tools
+          span {{ PrettyName(key) }}
+      md-content
+        md-list
+          md-item(ng-repeat="item in [].concat(value)")
+            md-item-content
+              div.md-title-content
+                h4 {{item}}
+            md-divider(ng-if='!$last')
