[Code] Added Profile service

--- a/views/layouts/layout.jade
+++ b/views/layouts/layout.jade
@@ -42,6 +42,7 @@ html
     script(src='/javascripts/controllers.js')
     script(src='/javascripts/services/Auth.js')
     script(src='/javascripts/services/Avatar.js')
+    script(src='/javascripts/services/Profile.js')
     script(src='/javascripts/services/Session.js')
     script(src='/javascripts/services/User.js')
     script(src='/javascripts/directives/ngThumb.js')
