--- a/views/layouts/layout.jade
+++ b/views/layouts/layout.jade
@@ -16,11 +16,13 @@ html
     script(src='/javascripts/allangular.js')
     script(src='//ajax.googleapis.com/ajax/libs/angularjs/1.3.6/angular-animate.min.js')
     script(src='//ajax.googleapis.com/ajax/libs/angularjs/1.3.6/angular-aria.min.js')
-    script(src='/vendor/material/angular-material.js')
+    script(src="//ajax.googleapis.com/ajax/libs/angular_material/0.8.3/angular-material.min.js")
+    //script(src='/vendor/material/angular-material.js')
     script(src='/vendor/angular-file-upload/angular-file-upload.js')
-    link(rel='stylesheet', href='/vendor/material/angular-material.css')
+    link(rel='stylesheet', href='//ajax.googleapis.com/ajax/libs/angular_material/0.8.3/angular-material.min.css')
     link(rel='stylesheet', href='/stylesheets/core.css')
     link(rel='stylesheet', href='/stylesheets/users/users.css')
+
     base(href='/')
 
     block neck
