[Code] Hooked up the editing of subject

--- a/views/layouts/layout.jade
+++ b/views/layouts/layout.jade
@@ -46,5 +46,6 @@ html
     script(src='/javascripts/services/Avatar.js')
     script(src='/javascripts/services/Profile.js')
     script(src='/javascripts/services/Session.js')
+    script(src='/javascripts/services/Subject.js')
     script(src='/javascripts/services/User.js')
     script(src='/javascripts/directives/ngThumb.js')
