[Code] Pretty profile.
This might be put inside a directive since I am using it in two places.

--- a/views/users/index.jade
+++ b/views/users/index.jade
@@ -31,3 +31,8 @@ div.container
                     div.md-title-content(ng-show='isQual')
                       h5 {{qualName}}
             md-divider(ng-if='!$last')
+      md-content(ng-show='value && isDegree(key)')
+        md-list
+          md-item(ng-repeat='item in value track by $index')
+            md-item-content
+              md-content(class='md-padding') {{item}}
