[Fix] Missing coma, User schema, User handler

--- a/views/users/index.jade
+++ b/views/users/index.jade
@@ -11,7 +11,7 @@ div.container
         pre {{summary}}
     div.col-sm-4
       p We will have a photo here
-      img(ng-src='{{img}}' style='max-height:200px')
+      img(ng-src='{{img}}', style='max-height:200px')
   div.row(ng-repeat='(key, value) in profile', layout='column', class='md-padding')
     div.col-sm-12(ng-show='value.length')
       md-toolbar.md-theme-light
