--- a/views/search/index.jade
+++ b/views/search/index.jade
@@ -1,2 +1,22 @@
-div
-  | hello {{search}}
+div(class='row', style='display:block')
+  div(class='col-md-3', data-spy="affix", data-offset-top="60", data-offset-bottom="200")
+    md-autocomplete(
+      placeholder="What subject are you looking for?",
+      md-selected-item="selectedSubject",
+      md-items='subject in getSubjects(searchedSubject)'
+      md-search-text='searchedSubject'
+      md-item-text='subject'
+    )
+      span(md-highlight-text='searchedSubject') {{subject}}
+
+    div(flex)
+      md-checkbox(ng-repeat='category in categories'
+      ng-model='selectedCategories[category]') {{category}}
+      section(layout="row" layout-sm="column" layout-align="center center")
+        md-button(class="md-raised md-primary", ng-click='selectAllCategories(true)') Select All
+        md-button(class="md-raised md-warn", ng-click='selectAllCategories(false)') Deselect All
+      pre Asteas: {{selectedCategories}}
+
+  div(class='col-md-9')
+    ox-search-profile(users='search')
+div {{selectedSubject}}
