--- a/views/search/oxSearchProfile.jade
+++ b/views/search/oxSearchProfile.jade
@@ -1,11 +1,11 @@
 div(class='row')
   table(class='col-md-12 table table-striped')
-    tr(ng-repeat='user in users')
-      td
+    tr(ng-repeat='user in users | filterSubject:selectedSubject | filterCategories:selectedCategories')
+      td(style='padding: 20px')
         div(class='row')
-          div(class='col-md-3')
+          div(class='col-sm-3')
             img(ng-src="/avatar/{{user.userId}}", style='max-height:200px')
-          div(class='col-md-9')
+          div(class='col-sm-9')
             h1 {{user.username}}
             h2 Subjects
             md-list
