[Code] Removing the prettySubject and subjectName
This is done because it’s easier to configure the subject name in the
database, meaning we don’t require launching the database again when
changing names of certain elements.

--- a/views/search/index.jade
+++ b/views/search/index.jade
@@ -20,4 +20,4 @@ div(class='row', style='display:block')
 
   div(class='col-md-9')
     ox-search-profile(users='search', selected-subject='selectedSubject', selected-categories='selectedCategories')
-pre {{search | filterSubject:selectedSubject | filterCategories:selectedCategories}}
+pre {{search | filterSubject:selectedSubject | filterCategoriesInSubject:selectedSubject:selectedCategories}}
