--- a/views/users/edit.jade
+++ b/views/users/edit.jade
@@ -6,7 +6,7 @@ div.container
     div.col-sm-8
       div
         h1 EDIIIIT {{currentUser}} Profile
-        pre {{tutoringSubject}}
+        pre Subjects {{tutoringSubject}}
         pre {{profile}}
         span Subject this guy teaches
 
