--- a/views/search/oxSearchProfile.jade
+++ b/views/search/oxSearchProfile.jade
@@ -6,7 +6,8 @@ div(class='row')
           div(class='col-sm-3')
             img(ng-src="/avatar/{{user.userId}}", style='max-height:200px')
           div(class='col-sm-9')
-            h1 {{user.username}}
+            h1
+             a(ng-href='/users/{{user.userId}}') {{user.username}}
             h2 Subjects
             md-list
               md-item(ng-repeat='subject in user.summary.summary')
