[Fix] Bootstrap CDN, logging out test fix.

--- a/views/layouts/layout.jade
+++ b/views/layouts/layout.jade
@@ -5,7 +5,7 @@ html
       title #{title}
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
     script(src='http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js')
-    link(rel='stylesheet', href='/vendor/bootstrap/css/bootstrap.css')
+    link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css')
     // CSS cascading order has this on the 3rd level of priority
       and on equal level of priority the latter wins
     // Importing angular and angular app
